Add required libraries to jupyter notebook

--- a/jupyter/tokenizer_and_data_prep.ipynb
+++ b/jupyter/tokenizer_and_data_prep.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66bc2a2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install -q transformers transformers[torch] dotenv datasets wandb optimum optimum[onnxruntime]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "109bcf55",
    "metadata": {},
